app/app.global.css
/*
 * @NOTE: Prepend a `~` to css file paths that are in your node_modules
 *        See https://github.com/webpack-contrib/sass-loader#imports
 */
@import '~@fortawesome/fontawesome-free/css/all.css';
@import '~normalize.css';
@import '~@blueprintjs/core/lib/css/blueprint.css';
@import '~@blueprintjs/icons/lib/css/blueprint-icons.css';

body {
  position: relative;
  color: hsla(204, 33%, 97%, 1);
  height: 100vh;
  background-color: hsla(206, 24%, 21%, 1);
  font-family: Arial, Helvetica, Helvetica Neue, serif;
  overflow-y: hidden;
  overflow-x: hidden;
}

h1 {
  margin: 0;
}

h2 br {
  display: none;
}

p {
  margin-top: 5px;
  margin-bottom: 5px;
}

.bp3-dark a,
.bp3-dark a:hover {
  color: rgb(153, 207, 241);
}

.bp3-editable-text {
  width: 100%;
}

.bp3-editable-text-input {
  width: 100% !important;
}

#root {
  height: 100%;
}

.property {
  font-size: small;
  padding: 4px;
  margin: 3px -5px;
  height: 25px;
  border-left: 5px solid hsl(207, 23%, 37%);
}

.ProseMirror {
  background: transparent;
  border-radius: 2px !important;
  border: 1px solid transparent;
  padding: 5px;
  white-space: pre-wrap;
  width: 100%;
}

.ProseMirror + div {
  visibility: hidden;
}

.ProseMirror-focused {
  border: 1px solid hsl(206, 24%, 64%) !important;
  outline: none;
}

.ProseMirror-focused + div {
  visibility: visible;
}

.ProseMirror + div + div {
  visibility: hidden;
}

.ProseMirror-focused + div + div {
  visibility: visible;
}

.ProseMirror ul,
.ProseMirror ol {
  padding-left: 15px;
}

.ProseMirror-gapcursor {
  position: absolute;
}

.selectedCell {
  background: rgba(255, 255, 255, 0.1);
}

.bp3-card {
  padding: 0;
}

.bp3-menu {
  padding: 0;
}

.bp3-icon-drag-handle-vertical {
  padding-top: 2px;
  padding-right: 3px;
}

.regular::after {
  font-weight: 900;
  font-family: 'Font Awesome\ 5 Free', sans-serif;
  display: inline-block;
  content: ' \f35d';
}

.cardLink::after {
  font-weight: 900;
  font-family: 'Font Awesome\ 5 Free', sans-serif;
  display: inline-block;
  content: ' \f45f';
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.4);
  border-radius: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: transparent;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgba(255, 255, 255, 0.55);
}

